--- a/slides/2022-Botany/index.html
+++ b/slides/2022-Botany/index.html
@@ -321,10 +321,12 @@
                 <section data-transition="none" class="future">
                     <div class="standard">
                         <h3 class="title">Reproductive character displacement</h3>                        
-                        <div class="textbox"><p style="font-size:28px; font-weight: 400;">
-                            <span style="font-weight: 600">Hypothesis:</span>
-                            Differences among populations (within species) are a result of <i>interspecific</i>
-                            interactions driving character displacement in local communities.
+                        <div class="textbox">
+                            <ul style="font-size:28px; font-weight: 400; margin-top: 0;">
+                                <li><span style="font-weight: 600">Hypothesis:</span>
+                                Differences among populations (within species) are a result of <i>interspecific</i>
+                                interactions driving character displacement in local communities. </li>
+                                <li>Test using  widespread variable species.</li>
                         </p></div>
                         <img src="../data-svg/character-displacement-4.svg" style="width:60%; margin-top:2%">
                     </div>
@@ -631,9 +633,9 @@
             <section class="future" data-transition="none">                
                 <section class="future" data-transition="none">
                     <div class="standard">
-                        <h3 class="title"> New projects: NSF CAREER</h3>
-                        <div class="textbox"><p style="text-align:center; font-weight: 400">
-                            Come visit our posters</p></div>
+                        <h3 class="title"> New projects: Genomes, transcriptomes, and 3D models.</h3>
+                        <div class="textbox"><p style="text-align:center; font-size: 25px;font-weight: 400">
+                            NSF CAREER: phylogenomic methods and <i>Pedicularis</i> species and population diversity.</p></div>
                         <img src="../data-img/botany-poster.png" 
                         style="width:35%; margin-right: 50px; filter: drop-shadow(10px 10px 10px #262626)">
                         <img src="../data-img/poster-yue-botany2022.png" 
@@ -683,18 +685,7 @@
                             <p style="text-align: center; margin-top: 0;">Jared Meek</p>
                         </div>
                     </div>
-                </section>
-
-                <section class="future" data-transition="none">                    
-                    <div class="standard">
-                        <h3 class="title">Ongoing work: Comparative phylogeography</h3>
-                        <img src="../data-img/jared-rhinanth_pops.png" style="width: 60%" >
-                        <div style="position:absolute; top:100px; left: 1300px">
-                            <img src="../../images/Jared-photo1.jpg" style="border-radius: 50%; width:55%"> 
-                            <p style="text-align: center; margin-top: 0;">Jared Meek</p>
-                        </div>
-                    </div>
-                </section>      
+                </section>   
             </section>
 
             <section class="future" data-transition="none" data-background-color="black">
