--- a/slides/2022-Botany/index.html
+++ b/slides/2022-Botany/index.html
@@ -548,11 +548,12 @@
                             <i>"forked beak"</i> and without.
                             </p>
                         </div>
-                        <iframe style="position:absolute; 
+                        <img src="../data-img/map-horns-1.png" style="position:absolute; width:450px; left:350px; top:225px;">                        
+<!--                         <iframe style="position:absolute; 
                             width:500px; height:600px; left:350px; top:225px;"
                             data-src="../data-html/crano-map-colored-horns.html">
                         </iframe>
-                        <img src="../data-svg/crano-tree-structure-K6-hornbill.svg" 
+ -->                        <img src="../data-svg/crano-tree-structure-K6-hornbill.svg" 
                         style="position:absolute; width:275px; left:900px; top:225px">
                     </div>
                 </section>
@@ -568,12 +569,14 @@
                             <i>"forked beak"</i> and without.
                             </p>
                         </div>
-                        <iframe style="position:absolute; 
-                            width:500px; height:600px; left:350px; top:225px;"
-                            data-src="../data-html/crano-map-colored-hybrids.html">
-                        </iframe>
+                        <img src="../data-img/map-horns-2.png" style="position:absolute; width:450px; left:350px; top:225px;">
                         <img src="../data-svg/crano-tree-structure-K6-hornbill.svg" 
                         style="position:absolute; width:275px; left:900px; top:225px">
+
+<!--                         <iframe style="position:absolute; 
+                            width:500px; height:600px; left:350px; top:225px;"
+                            data-src="../data-html/crano-map-colored-hybrids.html">
+                        </iframe> -->
 
                         <!-- hybrid zone 1: 11 to 12: sampled extensively -->    
                         <div class="fragment fade-in-then-out">
