--- a/slides/2022-Botany/index.html
+++ b/slides/2022-Botany/index.html
@@ -694,7 +694,7 @@
             <section class="future" data-transition="none" data-background-color="black">
                 <div style="display: flex;">
                     <div style="width:45%; margin: 0; padding: 0; background-color: black; float: left; padding: 20px">
-                        <img src="/home/deren/Pictures/Pedicularis-black/Botany-Pedicularis-poster-print.jpg" style="width: 85%">
+                        <img src="../data-img/Botany-Pedicularis-poster-print.jpg" style="width: 85%">
                     </div>
 
                     <div style="width:53%; float: left; padding: 20px">
