--- a/slides/2022-Botany/index.html
+++ b/slides/2022-Botany/index.html
@@ -209,6 +209,25 @@
                     </div>
                 </section>
 
+                <section class="future" data-transition="none" data-background-color="black">
+                    <div style="display: flex;">
+                        <div style="width:45%; margin: 0; padding: 0; background-color: black; float: left; padding: 20px">
+                            <img src="../data-img/Botany-Pedicularis-poster-print.jpg" style="width: 85%">
+                        </div>
+
+                        <div style="width:53%; float: left; padding: 20px">
+                            <h3 class="title" style="color:white">Current projects</h3>
+                            <ul style="font-size: 0.7em; margin-top: 50px; color: white; margin-left:5%; margin-right: 0;">
+                                <li> Large-scale community sampling to investigate reproductive interactions.</li>
+                                <br>
+                                <li> Massive 3RAD sequencing of both species and population diversity.</li>
+                                <li> Transcriptome and 3D morphometric flower data for PhyloGWAS. </li>
+                                <li> 7 chromosome-scale genome assemblies for trait mapping and phylogenomics.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>                
+
 <!--                 <section data-transition="none" data-background-color=#262626 hidden="">
                     <div class="standard">
                         <div style="text-align:center; margin-top:15%; margin-right: 10%; margin-left: 10%">
