--- a/slides/2022-Botany/index.html
+++ b/slides/2022-Botany/index.html
@@ -220,7 +220,7 @@
                             <ul style="font-size: 0.7em; margin-top: 50px; color: white; margin-left:5%; margin-right: 0;">
                                 <li> Large-scale community sampling to investigate reproductive interactions.</li>
                                 <br>
-                                <li> Massive 3RAD sequencing of both species and population diversity.</li>
+                                <li> Massive 3RAD sequencing of both species and population diversity <br>(117 species, >900 specimens).</li>
                                 <li> Transcriptome and 3D morphometric flower data for PhyloGWAS. </li>
                                 <li> 7 chromosome-scale genome assemblies for trait mapping and phylogenomics.</li>
                             </ul>
