--- a/slides/fundamentals/1/index.html
+++ b/slides/fundamentals/1/index.html
@@ -114,7 +114,7 @@
                     <br>
                     <br>
                     <span style="font-weight: 400">1859:</span> Darwin publishes <i>The Origin of Species</i> describing <i>descent with modification</i> and the role of <i>natural selection</i> acting on hereditary variation. 
-                    <!-- He provides abundant examples taxonomy, biogeography, anatomy, paleontology, physiology, behavior, ecology, and artificial selection (animal breeding). He understood the revolutionary impact of his idea. Alfred Russel Wallace independently discovered natural selection shortly after Darwin. -->
+                    <!-- He provides abundant examples taxonomy, biogeography, anatomy, paleontology, physiology, behavior, ecology, and artificial selection (animal breeding). He understood the revolutionary impact of his idea. Alfred Russel Wallace independently discovered natural selection shortly after Darwin. -->                
                     </p>
                     </div>
                 </section>
@@ -130,7 +130,8 @@
                     <br>
                     <span style="font-weight: 400">1798, Thomas Malthus:</span> wrote <i>The Principle of Population</i> arguing that populations will overgrow their capacity and cause massive starvation. At the time this thesis spurred social debates over class and government.
                     Darwin realized the consequences of a non-random subset of individuals surviving to reproduce.
-                    </p>             
+                    (Note: Malthus's theory was not about natural populations and included eugenecist arguments in favor of capitalism and racism.)
+                    </p>
                     </div>
                 </section>
 
@@ -179,7 +180,7 @@
                     <h2> Shameful histories</h2>
                     <br>
                     <p style="font-size: 0.9em; text-align: left; margin-left: 15%; margin-right: 15%"> 
-                    <span style="font-weight: 400">Eugenics:</span> The connection between the rise of evolutionary theory and eugenics cannot be ignored. Nearly every evolutionary biologist of the modern synthesis era was involved in debates on the topic. Although it has fallen from favor, the ideas  persist in many systemic and outright ways today.
+                    <span style="font-weight: 400">Eugenics:</span> The connection between the rise of evolutionary theory and eugenics cannot be ignored. Nearly every evolutionary biologist of the modern synthesis era was involved in debates on the topic. Many were in favor of eugenics, and even those who argued against it often used language that we would find offensive today. These ideas persist in many systemic and outright ways today.
                     <br>
                     <br>
                     <span style="font-weight: 400">R.A. Fisher:</span> one of the founding fathers of the Modern Synthesis (and also of Statistics) wrote extensively on eugenics, promoting racist doctrines and sterilization of people with disabilities.
@@ -299,10 +300,6 @@
             </p>
             </div>
         </section>            
-
-
-
-
 
 
             </section>                
