--- a/slides/2023-Evolution/index.html
+++ b/slides/2023-Evolution/index.html
@@ -584,7 +584,8 @@
                         <i>Topology-changes are more informative than tree-changes; optima at true sim. values.
                         <br>Example: loci=50, length=0.1Mb, recomb=2e-9, samples-per-lineage=4.</i>
                     </p></div>
-                    <img src="./images/likelihood-surface.svg" style="width:90%">
+                    <!-- <img src="./images/likelihood-surface.svg" style="width:90%"> -->
+                    <img src="./images/likelihood-figure3.svg" style="width:90%">
                 </div>
             </section>     
 
