--- a/slides/2023-Evolution/index.html
+++ b/slides/2023-Evolution/index.html
@@ -671,11 +671,11 @@
                                 <li>Validated: accurate against stochastic coalescent simulations</li>
                             </div>
                             <div class="fragment">                            
-                                <li>Waiting distances provide <i>more</i> information in MSC-type models than
-                                in a single population coalescent.</li>
+                                <li>MSC models predict more informative statistics (waiting distances) about linked
+                                genealogical variation than a single population model.</li>
                             </div>
                             <div class="fragment">                            
-                                <li>We can estimate MSC model parameters from <i>linked genome data!</i></li>
+                                <li>A big step towards estimating MSC models from <i>linked genome data!</i></li>
                             </div>
                             <div class="fragment">                            
                                 <li>Topology-changes are easily detactable in sequence data.</i></li>
